{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 24,
  "lineage": "3c16ef3b-8085-eba0-5c13-b5f358974244",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:network-acl/acl-00a623eeef38bbaa8",
            "default_network_acl_id": "acl-00a623eeef38bbaa8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00a623eeef38bbaa8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "339713187727",
            "subnet_ids": [
              "subnet-03addbd620ed0125e",
              "subnet-0664a4b892d462102",
              "subnet-067a8610591eae23e",
              "subnet-0d7c6bfa498623225"
            ],
            "tags": {
              "Name": "my-vpc-terra-default"
            },
            "tags_all": {
              "Name": "my-vpc-terra-default"
            },
            "vpc_id": "vpc-098f9e048772666e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:route-table/rtb-04ce098fde192b8ed",
            "default_route_table_id": "rtb-04ce098fde192b8ed",
            "id": "rtb-04ce098fde192b8ed",
            "owner_id": "339713187727",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "my-vpc-terra-default"
            },
            "tags_all": {
              "Name": "my-vpc-terra-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-098f9e048772666e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:security-group/sg-07e182ddddc017f13",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07e182ddddc017f13",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "339713187727",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-vpc-terra-default"
            },
            "tags_all": {
              "Name": "my-vpc-terra-default"
            },
            "vpc_id": "vpc-098f9e048772666e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbfcaf730d24d5e9",
            "arn": "arn:aws:ec2:us-east-1:339713187727:elastic-ip/eipalloc-0fbfcaf730d24d5e9",
            "domain": "vpc",
            "id": "eipalloc-0fbfcaf730d24d5e9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-107-20-150-152.compute-1.amazonaws.com",
            "public_ip": "107.20.150.152",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-vpc-terra-us-east-1a"
            },
            "tags_all": {
              "Name": "my-vpc-terra-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059d8bacee0c88b27",
            "arn": "arn:aws:ec2:us-east-1:339713187727:elastic-ip/eipalloc-059d8bacee0c88b27",
            "domain": "vpc",
            "id": "eipalloc-059d8bacee0c88b27",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-50-16-24-7.compute-1.amazonaws.com",
            "public_ip": "50.16.24.7",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-vpc-terra-us-east-1b"
            },
            "tags_all": {
              "Name": "my-vpc-terra-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:internet-gateway/igw-0cc08f5b08f8b9aa8",
            "id": "igw-0cc08f5b08f8b9aa8",
            "owner_id": "339713187727",
            "tags": {
              "Name": "my-vpc-terra"
            },
            "tags_all": {
              "Name": "my-vpc-terra"
            },
            "vpc_id": "vpc-098f9e048772666e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbfcaf730d24d5e9",
            "association_id": "eipassoc-02d26c7cc39a31140",
            "connectivity_type": "public",
            "id": "nat-069f8a53446203b1c",
            "network_interface_id": "eni-0e6335a062a1f202f",
            "private_ip": "10.0.1.165",
            "public_ip": "107.20.150.152",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-067a8610591eae23e",
            "tags": {
              "Name": "my-vpc-terra-us-east-1a"
            },
            "tags_all": {
              "Name": "my-vpc-terra-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059d8bacee0c88b27",
            "association_id": "eipassoc-0e3fc79a44114bec6",
            "connectivity_type": "public",
            "id": "nat-03ee0eb0a2e9983c8",
            "network_interface_id": "eni-046ae1de950386d69",
            "private_ip": "10.0.2.205",
            "public_ip": "50.16.24.7",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03addbd620ed0125e",
            "tags": {
              "Name": "my-vpc-terra-us-east-1b"
            },
            "tags_all": {
              "Name": "my-vpc-terra-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0188bccee372128bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-069f8a53446203b1c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0188bccee372128bd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d7582d2a91dae71d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03ee0eb0a2e9983c8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d7582d2a91dae71d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cc08f5b08f8b9aa8",
            "id": "r-rtb-0b0440f65af9c8c221080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b0440f65af9c8c22",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:route-table/rtb-0188bccee372128bd",
            "id": "rtb-0188bccee372128bd",
            "owner_id": "339713187727",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-terra-private-us-east-1a"
            },
            "tags_all": {
              "Name": "my-vpc-terra-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-098f9e048772666e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:route-table/rtb-0d7582d2a91dae71d",
            "id": "rtb-0d7582d2a91dae71d",
            "owner_id": "339713187727",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-terra-private-us-east-1b"
            },
            "tags_all": {
              "Name": "my-vpc-terra-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-098f9e048772666e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:route-table/rtb-0b0440f65af9c8c22",
            "id": "rtb-0b0440f65af9c8c22",
            "owner_id": "339713187727",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-terra-public"
            },
            "tags_all": {
              "Name": "my-vpc-terra-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-098f9e048772666e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c1934c572d58438",
            "route_table_id": "rtb-0188bccee372128bd",
            "subnet_id": "subnet-0664a4b892d462102"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a57eb446b1213cbb",
            "route_table_id": "rtb-0d7582d2a91dae71d",
            "subnet_id": "subnet-0d7c6bfa498623225"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083311619bac62830",
            "route_table_id": "rtb-0b0440f65af9c8c22",
            "subnet_id": "subnet-067a8610591eae23e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b12b985fe68cd5f1",
            "route_table_id": "rtb-0b0440f65af9c8c22",
            "subnet_id": "subnet-03addbd620ed0125e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:subnet/subnet-0664a4b892d462102",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0664a4b892d462102",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713187727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-terra-private-us-east-1a"
            },
            "tags_all": {
              "Name": "my-vpc-terra-private-us-east-1a"
            },
            "vpc_id": "vpc-098f9e048772666e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:subnet/subnet-0d7c6bfa498623225",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7c6bfa498623225",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713187727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-terra-private-us-east-1b"
            },
            "tags_all": {
              "Name": "my-vpc-terra-private-us-east-1b"
            },
            "vpc_id": "vpc-098f9e048772666e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:subnet/subnet-067a8610591eae23e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067a8610591eae23e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713187727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-terra-public-us-east-1a"
            },
            "tags_all": {
              "Name": "my-vpc-terra-public-us-east-1a"
            },
            "vpc_id": "vpc-098f9e048772666e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:subnet/subnet-03addbd620ed0125e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03addbd620ed0125e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713187727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-terra-public-us-east-1b"
            },
            "tags_all": {
              "Name": "my-vpc-terra-public-us-east-1b"
            },
            "vpc_id": "vpc-098f9e048772666e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:vpc/vpc-098f9e048772666e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00a623eeef38bbaa8",
            "default_route_table_id": "rtb-04ce098fde192b8ed",
            "default_security_group_id": "sg-07e182ddddc017f13",
            "dhcp_options_id": "dopt-09cd5f3382f696b6f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-098f9e048772666e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ce098fde192b8ed",
            "owner_id": "339713187727",
            "tags": {
              "Name": "my-vpc-terra"
            },
            "tags_all": {
              "Name": "my-vpc-terra"
            }
          }
        }
      ]
    }
  ]
}